--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <jetty.version>9.4.11.v20180605</jetty.version>
     <spring.version>5.0.7.RELEASE</spring.version>
+    <hibernate.version>5.1.15.Final</hibernate.version>
+    <postgresql.version>42.2.4</postgresql.version>
   </properties>
 
   <dependencies>
@@ -41,6 +43,21 @@
           <artifactId>commons-logging</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgresql.version}</version>
     </dependency>
 
     <dependency>
