--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,11 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <jetty.version>9.4.11.v20180605</jetty.version>
     <spring.version>5.0.7.RELEASE</spring.version>
-    <hibernate.version>5.1.15.Final</hibernate.version>
+    <hibernate.version>5.3.3.Final</hibernate.version>
     <postgresql.version>42.2.4</postgresql.version>
     <jackson.version>2.9.6</jackson.version>
+    <log4j.version>2.11.1</log4j.version>
+    <ehcache.version>3.5.2</ehcache.version>
   </properties>
 
   <dependencies>
@@ -56,6 +58,16 @@
       <version>${hibernate.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-jcache</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>${ehcache.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>${postgresql.version}</version>
@@ -74,6 +86,22 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j.version}</version>
     </dependency>
 
     <dependency>
