use Apache Ignite as a client in cluster

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
       <version>${ignite.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.ignite</groupId>
+      <artifactId>ignite-spring</artifactId>
+      <version>${ignite.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>${postgresql.version}</version>
